data/derived/sp14/progs/unify/prog0350.ml.out
Characters 58-66:
  | Average (x', y') -> (x +. y)/2;;
                        ^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
